# polevaya_cw_3_db

./: README.md  pyproject.toml
data/: employers.json  vacancies1942330.json
src/: db_creator.py  db_manager.py  hh_parser.py  main.py
