[tool.poetry]
name = "polevaya-cw-3-db"
version = "0.1.0"
description = "Cource work for data bases using hh.ru"
authors = ["Irina Polevaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
