[tool.poetry]
name = "polevaya-cw-3-db"
version = "0.1.0"
description = "Cource work for data bases using hh.ru"
authors = ["Irina Polevaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.9"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool_black]
line-length = 125
exclude = """
(
  /(
    | .git          # в корне проекта
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
"""

[tool_isort]
line-length = 125

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
